black bar doesn't work still

--- a/Jan/nutritions.html
+++ b/Jan/nutritions.html
@@ -6,11 +6,156 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Nutrition</title>
 </head>
 
 <body>
-
+    <div class="box">
+        <div class="heading">
+            <h1>
+                Nutrition Facts
+            </h1>
+            <p>Serving Size 1 cup (50g)</p>
+            <p>Servings Per Container 10</p>
+        </div>
+        <div class="blackbar"></div>
+        <div class="servingTable">
+            <p>Amount per Serving</p>
+            <p>Cereal</p>
+            <p>with 1/2 cup 1% milk</p>
+        </div>
+        <div class="blackbarthin"></div>
+        <div class="calories">
+            <p>Calories</p>
+            <p>190</p>
+            <p>250</p>
+        </div>
+        <div class="grayLine"></div>
+        <div class="fatCalories">
+            <p>Calories from Fat</p>
+            <p>35</p>
+            <p>45</p>
+        </div>
+        <div class="dailyValue">
+            <p>% Daily Value**</p>
+        </div>
+        <div class="totalFat">
+            <p>Total Fat 4g*</p>
+            <p>6%</p>
+            <p>8%</p>
+        </div>
+        <div class="saturatedFat">
+            <p>Saturated Fat 1.5g</p>
+            <p>8%</p>
+            <p>13%</p>
+        </div>
+        <div class="grayLine"></div>
+        <div class="transFat">
+            <p>Trans Fat 0g</p>
+        </div>
+        <div class="Cholesterol">
+            <p>Cholesterol 0mg</p>
+            <p>0%</p>
+            <p>3%</p>
+        </div>
+        <div class="Sodium">
+            <p>Sodium 190mg</p>
+            <p>8%</p>
+            <p>11%</p>
+        </div>
+        <div class="Carbohydrate">
+            <p>Total Carbohydrate 39g</p>
+            <p>13%</p>
+            <p>15%</p>
+        </div>
+        <div class="Fibers">
+            <p>Dietary Fiber 6g</p>
+            <p>24%</p>
+            <p>24%</p>
+        </div>
+        <div class="sugar">
+            <p>Sugar 11g</p>
+        </div>
+        <div class="Protein">
+            <p>Protein 4g</p>
+        </div>
+        <div class="blackbar"></div>
+        <div class="vitaminA">
+            <p>Vitamin A</p>
+            <p>0%</p>
+            <p>6%</p>
+        </div>
+        <div class="vitaminC">
+            <p>Vitamin C</p>
+            <p>0%</p>
+            <p>2%</p>
+        </div>
+        <div class="calcium">
+            <p>Calcium</p>
+            <p>2%</p>
+            <p>15%</p>
+        </div>
+        <div class="grayLineLong"></div>
+        <div class="iron">
+            <p>Iron</p>
+            <p>6%</p>
+            <p>6%</p>
+        </div>
+        <hr>
+        <div class="addiotinal">
+            <p>*Amount In Cereal with 1/2 cup 1% milk contributes an additional 60 Calories (10 Calories from Fat), 1 g Total Fat (1g Saturated Fat), 10 mg Cholesterol, 70 mg Sodium, 7 g Total Carbohydrate (6 g Sugars), 5 g Protein</p>
+            <p>**Percent Daily Values are based on a 2,000 calorie diet. Your daily values may be higher or lowed depending on your calorie needs:</p>
+        </div>
+        <div class="summary1">
+            <p>Calories:</p>
+            <p>2.000</p>
+            <p>2.500</p>
+        </div>
+        <div class="grayLineLong"></div>
+        <div class="summary2">
+            <p>Total Fat</p>
+            <p>Less than</p>
+            <p>65g</p>
+            <p>80g</p>
+        </div>
+        <div class="summary3">
+            <p>Saturated Fat</p>
+            <p>Less than</p>
+            <p>20g</p>
+            <p>25g</p>
+        </div>
+        <div class="summary4">
+            <p>Cholesterol</p>
+            <p>Less than</p>
+            <p>300mg</p>
+            <p>300mg</p>
+        </div>
+        <div class="summary5">
+            <p>Sodium</p>
+            <p>Less than</p>
+            <p>2.400mg</p>
+            <p>2.400mg</p>
+        </div>
+        <div class="summary6">
+            <p>Total Carbohydrate</p>
+            <p>300g</p>
+            <p>375g</p>
+        </div>
+        <div class="summary7">
+            <p>Dietary Fiber</p>
+            <p>25g</p>
+            <p>30g</p>
+        </div>
+        <div class="grayLineLong"></div>
+        <div class="calories">
+            <p>Calories per gram:</p>
+        </div>
+        <div class="calorieInfo">
+            <p>Fat 9</p>
+            <p>Carbohydrate 4</p>
+            <p>Protein 4</p>
+        </div>
+    </div>
 </body>
 
 </html>
