last push, lmao fuck this

--- a/Jan/nutritions.html
+++ b/Jan/nutritions.html
@@ -22,7 +22,7 @@
         <div class="servingTable">
             <p>Amount per Serving</p>
             <p>Cereal</p>
-            <p>with 1/2 cup 1% milk</p>
+            <p>with 1/2 <br> cup 1% <br> milk</p>
         </div>
         <div class="blackbarthin"></div>
         <div class="calories">
