--- a/Maria/index2.html
+++ b/Maria/index2.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="box">
-        <div class="col1 item" style="background-color: yellow ;"></div>
+        <div class="col1 item"></div>
         <div class="col2">
             <div class="box1">
                 <div class="box3">
@@ -25,9 +25,6 @@
             </div>
             <div class="box2 item"></div>
         </div>
-    </div>
-    <div class="test"><span>Lorem ipsum dolor sit amet.</span>
-        <h1>Lorem, ipsum.</h1>
     </div>
 </body>
 
